SERVER-60275 add LockerNoopClientObserverRegisterer

This registration helper is intended for use in cases where the
a member field requires a ServiceContext to be updated, making it
infeasible to perform the client observer registration in the
constructor body.